--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "server-only": "^0.0.1",
-    "stripe": "^18.1.0",
+    "stripe": "18.3.0",
     "swr": "^2.3.3",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.3",
