--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.1",
     "drizzle-orm": "^0.43.1",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
     "jose": "^6.0.11",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
     "next": "15.4.0-canary.47",
     "openai": "^5.8.1",
